--- a/setup.cfg
+++ b/setup.cfg
@@ -18,8 +18,11 @@ classifiers =
 packages = find:
 include_package_data = True
 python_requires = >=3.11.0
-# install_requires =
-
-# [options.entry_points]
-# console_scripts =
-    # audera = audera.cli.audera:main
+install_requires = 
+    fastapi
+    uvicorn[standard]
+    litellm
+    PyGithub
+    python-dotenv
+    pytest
+    coverage
