--- a/.github/workflows/swe_agent.yaml
+++ b/.github/workflows/swe_agent.yaml
@@ -1,15 +1,18 @@
 # This workflow is triggered by the Bunsen issue-agent when a specific label
-# is added to a GitHub issue. It sets up the environment and runs the
-# Beaker swe-agent to process the issue.
+#   is added to a GitHub issue. It sets up the environment and runs the
+#   Beaker swe-agent to process the issue.
+
 name: Beaker (swe-agent)
 
-# This trigger allows the workflow to be manually run with a workflow_dispatch event.
-# The 'inputs' section defines the parameters that can be passed to the workflow.
 on:
   workflow_dispatch:
     inputs:
       repo_name:
         description: 'The name of the GitHub repository.'
+        required: true
+        type: str
+      repo_branch:
+        description: 'The branch of the Github repository.'
         required: true
         type: str
       installation_id:
@@ -21,48 +24,55 @@ on:
         required: true
         type: number
 
-# Grant the necessary permissions for the workflow. The agent needs to read the
-# repository's content and write to issues and pull requests.
 permissions:
   contents: write
   issues: write
   pull-requests: write
 
-# A workflow is composed of one or more jobs.
 jobs:
   build_and_run:
-    # Use the latest version of the Ubuntu Linux runner.
     runs-on: ubuntu-latest
-    
-    # Define a set of environment variables for this job.
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
-    # Define the steps that will be executed in this job.
     steps:
-      # Step 1: Check out the repository code.
-      # This action makes the repository's code available to the workflow.
-      - name: Checkout Repository
-        uses: actions/checkout@v4
 
-      # Step 2: Set up Python.
-      # This action installs a specified version of Python and adds it to the PATH.
+      # Check out the repository code
+      - name: Checkout the repository
+        uses: actions/checkout@v4
+        with:
+          ref: ${{ github.event.inputs.repo_branch}}
+          path: bunsen
+
+      # Check out swe-agent
+      - name: Checkout swe-agent
+        uses: actions/checkout@v4
+        with:
+          repository: SWE-agent/SWE-agent
+          path: swe-agent
+
+      # Set up Python
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11' # Use the Python version compatible with your project.
+          python-version: '3.11'
           cache: 'pip'
 
-      # Step 3: Install project dependencies.
-      # It's good practice to install from a `requirements.txt` file to ensure
-      # a consistent environment.
-      - name: Install Dependencies
+      # Upgrade pip
+      - name: Upgrade pip
         run: |
-          pip install -r requirements.txt
+          python -m pip install --upgrade pip
 
-      # Step 4: Run the Coding Agent.
-      # This is the core step that executes the agent's logic.
-      # It passes the `issue_id` from the workflow inputs to the agent's run command.
+      # Install swe-agent
+      - name: Install swe-agent
+        run: |
+          pip install swe-agent
+
+      # Install bunsen
+      - name: Install bunsen
+        run: |
+          pip install bunsen
+
+      # Run the Coding Agent
       - name: Run swe-agent
         run: python -m bunsen.swe_agent.agent --repo_name ${{ github.event.inputs.repo_name}} --installation_id ${{ github.event.inputs.installation_id}} --issue_id ${{ github.event.inputs.issue_id }}
 
