Resolves github action bug issue

--- a/.github/workflows/swe_agent.yaml
+++ b/.github/workflows/swe_agent.yaml
@@ -65,12 +65,12 @@ jobs:
       # Install swe-agent
       - name: Install swe-agent
         run: |
-          pip install swe-agent
+          pip install ./swe-agent
 
       # Install bunsen
       - name: Install bunsen
         run: |
-          pip install bunsen
+          pip install ./bunsen
 
       # Run the Coding Agent
       - name: Run swe-agent
