--- a/.github/workflows/swe_agent.yaml
+++ b/.github/workflows/swe_agent.yaml
@@ -34,6 +34,11 @@ jobs:
     runs-on: ubuntu-latest
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      BUNSEN_GITHUB_APP_ID: ${{ secrets.BUNSEN_GITHUB_APP_ID }}
+      BUNSEN_GITHUB_PRIVATE_KEY: ${{ secrets.BUNSEN_GITHUB_PRIVATE_KEY }}
+      BUNSEN_GITHUB_WEBHOOK_SECRET: ${{ secrets.BUNSEN_GITHUB_WEBHOOK_SECRET }}
+      GEMINI_API_KEY: ${{ secrets.GEMINI_API_KEY }}
+
     steps:
 
       # Check out the repository code
