Fixes swe-agent install bug issue

--- a/.github/workflows/swe_agent.yaml
+++ b/.github/workflows/swe_agent.yaml
@@ -71,7 +71,7 @@ jobs:
       # Install swe-agent
       - name: Install swe-agent
         run: |
-          pip install ./swe-agent
+          pip install --editable ./swe-agent
 
       # Install bunsen
       - name: Install bunsen
