Fixes missing python dependency

--- a/.github/workflows/swe_agent.yaml
+++ b/.github/workflows/swe_agent.yaml
@@ -72,7 +72,7 @@ jobs:
       # Install swe-agent
       - name: Install swe-agent
         run: |
-          pip install --editable ./swe-agent
+          pip install --editable ./swe-agent && pip install google-cloud-aiplatform
 
       # Install bunsen
       - name: Install bunsen
