--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
-fastapi
-uvicorn[standard]
-litellm
-PyGithub
-python-dotenv
-pytest
-coverage
+fastapi==0.116.1
+uvicorn[standard]==0.35.0
+litellm==1.75.5.post2
+PyGithub==2.7.0
+python-dotenv==1.1.1
